--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,9 @@
     <description>How to use zerocode in your project</description>
 
     <properties>
-        <zerocode-rest-bdd.version>1.1.24</zerocode-rest-bdd.version>
+        <zerocode-rest-bdd.version>1.1.31</zerocode-rest-bdd.version>
         <junit.version>4.12</junit.version>
         <java.version>1.8</java.version>
-        <plugin.source.version>3.0.0</plugin.source.version>
         <micro-simulator.version>1.1.8</micro-simulator.version>
     </properties>
 
@@ -57,6 +56,7 @@
                 <configuration>
                     <includes>
                         <include>com.group.vfs.contracttests.EndToEndContractTest</include>
+                        <include>com.group.vfs.soaptests.EndToEndSoapTest</include>
                     </includes>
                 </configuration>
             </plugin>
